--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node node_modules/static-server/bin/static-server.js --port 8080"
+    "start": "node node_modules/static-server/bin/static-server.js --port 8080 ./"
   },
   "author": "",
   "license": "ISC",
