--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "static-server": "^2.0.3"
+  },
+  "dependencies": {
+    "riot": "^2.5.0"
   }
 }
