--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node node_modules/static-server/bin/static-server.js --port 8080 ./"
+    "start": "node node_modules/static-server/bin/static-server.js --port 8080 ./",
+    "webpack": "./node_modules/.bin/webpack-dev-server --optimize-minimize"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "static-server": "^2.0.3"
+    "babel": "^6.5.2",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
+    "riotjs-loader": "^3.0.0",
+    "static-server": "^2.0.3",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "riot": "^2.5.0"
